Added testimonial in menu

--- a/i18n/np.yaml
+++ b/i18n/np.yaml
@@ -138,7 +138,7 @@
 
 ## Homepage testimonials
 - id: "testimonials_title"
-  translation: "Testimonials"
+  translation: "प्रशंसापत्र"
 
 ## Homepage contact
 - id: "contact_title"
